--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^34.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -15,13 +16,16 @@
     "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
-    "react-native-svg": "^9.8.5",
+    "react-native-sqlite-storage": "^4.1.0",
+    "react-native-svg": "^9.5.3",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.0",
     "react-navigation-drawer": "^2.1.0",
-    "react-navigation-stack": "^1.5.3"
+    "react-navigation-stack": "^1.5.3",
+    "sqlite": "^3.0.3",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
