--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-sqlite-storage": "^4.1.0",
     "react-native-svg": "^9.5.3",
     "react-native-svg-charts": "^5.3.0",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.0",
