--- a/app.json
+++ b/app.json
@@ -11,9 +11,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/splash.png",
+    "icon": "",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -28,6 +28,9 @@
     },
     "android": {
       "package": "com.kiotrack.mi_billetera"
+    },
+    "rnpm": {
+      "assets": ["./assets/fonts"]
     }
   }
 }
