--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "aes256": "^1.0.4",
     "axios": "^0.19.0",
     "expo": "^34.0.1",
     "react": "16.8.3",
